--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@ header::before {
     <!-- SkilliiZee Logo -->
     <div class="mb-12 md:mb-16">
       <img 
-        src="./images/skillizee.png" 
+        src="https://storage.googleapis.com/skillizee-io.firebasestorage.app/images/logos/skillizee-white-logo.png" 
         alt="SkilliiZee" 
         class="mx-auto w-48 md:w-64 lg:w-72 h-auto drop-shadow-2xl"
         loading="lazy"
@@ -826,10 +826,55 @@ header::before {
   </div>
 </main>
 
-<footer class="py-16 text-center text-lg">
-  <div class="max-w-6xl mx-auto px-6">
-    © <span id="year">2026</span> Running a Cafe – The Business of Beans  
-    <span class="mx-4">•</span> Crafted for Excellence • Brewed for Legacy
+<footer class="relative bg-gradient-to-t from-[#2c1a0f] via-[#3f2a12] to-[#4a3520] text-[#fff8e7] pt-16 pb-12 overflow-hidden">
+  <!-- Subtle decorative gold line at top -->
+  <div class="absolute top-0 left-0 right-0 h-1 bg-gradient-to-r from-transparent via-[#d4af37] to-transparent opacity-70"></div>
+
+  <div class="max-w-6xl mx-auto px-6 md:px-10">
+    <!-- Logo + Slogan -->
+    <div class="text-center mb-12">
+      <img 
+        src="https://storage.googleapis.com/skillizee-io.firebasestorage.app/images/logos/skillizee-white-logo.png" 
+        alt="SkilliZee Logo" 
+        class="mx-auto h-20 md:h-28 w-auto drop-shadow-2xl mb-6"
+        loading="lazy"
+      >
+      <p class="text-xl md:text-2xl font-medium tracking-wide text-amber-200 opacity-95">
+        Empowering Skills for Tomorrow's World
+      </p>
+    </div>
+
+    <!-- Social Links -->
+    <div class="flex justify-center gap-8 md:gap-12 mb-10">
+      <a href="https://twitter.com/skillizee" target="_blank" rel="noopener" class="text-amber-300 hover:text-amber-100 transition-colors duration-300 text-2xl transform hover:scale-110">
+        <i class="fab fa-twitter"></i> <!-- assume Font Awesome or replace with SVG -->
+      </a>
+      <a href="https://facebook.com/skillizee" target="_blank" rel="noopener" class="text-amber-300 hover:text-amber-100 transition-colors duration-300 text-2xl transform hover:scale-110">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="https://instagram.com/skillizee" target="_blank" rel="noopener" class="text-amber-300 hover:text-amber-100 transition-colors duration-300 text-2xl transform hover:scale-110">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://linkedin.com/company/skillizee" target="_blank" rel="noopener" class="text-amber-300 hover:text-amber-100 transition-colors duration-300 text-2xl transform hover:scale-110">
+        <i class="fab fa-linkedin-in"></i>
+      </a>
+    </div>
+
+    <!-- Contact Info -->
+    <div class="text-center mb-10 text-lg md:text-xl opacity-90">
+      <p class="mb-3">
+        Email: <a href="mailto:pm@skillizee.io" class="text-amber-300 hover:text-amber-100 transition">pm@skillizee.io</a><br class="md:hidden">
+        <span class="hidden md:inline mx-3">|</span>
+        Phone: <a href="tel:+917597318172" class="text-amber-300 hover:text-amber-100 transition">+91-7597318172</a><br class="md:hidden">
+        <span class="hidden md:inline mx-3">|</span>
+        Website: <a href="https://www.skillizee.io" target="_blank" rel="noopener" class="text-amber-300 hover:text-amber-100 transition">www.skillizee.io</a>
+      </p>
+    </div>
+
+    <!-- Copyright -->
+    <div class="text-center text-base md:text-lg opacity-80 border-t border-amber-700/40 pt-8 mt-8">
+      © 2026 SkilliZee. All rights reserved. | Budget Boss Course
+    </div>
   </div>
 </footer>
 
