--- a/index.html
+++ b/index.html
@@ -501,15 +501,15 @@ header::before {
 
       <p class="text-lg md:text-xl lg:text-2xl text-amber-50/90 max-w-4xl mx-auto leading-relaxed drop-shadow-md">
         Transform your learning journey with hands-on projects, industry mentors, and co-branded internships from 
-        <span class="font-semibold text-amber-300">Netflix</span>, 
+        <span class="font-semibold text-amber-300">HOCCO</span>, 
         <span class="font-semibold text-amber-300">Gudgum</span>, 
-        <span class="font-semibold text-amber-300">Starbucks</span> and more.
+        <span class="font-semibold text-amber-300">Satly</span> and more.
       </p>
     </div>
 
     <!-- Course Title – with explicit safe line-height and padding -->
     <div class="py-6 md:py-10">
-      <h1 class="header-title text-5xl sm:text-6xl md:text-7xl lg:text-8xl font-light tracking-tight text-amber-100 leading-[1.05] mb-4 md:mb-6">
+      <h1 class="h1 text-5xl sm:text-6xl md:text-7xl lg:text-8xl font-light tracking-tight text-amber-100 leading-[1.05] mb-4 md:mb-6">
         Running a Cafe
       </h1>
     </div>
@@ -877,6 +877,7 @@ header::before {
     </div>
   </div>
 </footer>
+
 <script>
 const track = document.getElementById('carouselTrack');
 const prevBtn = document.getElementById('prevBtn');
@@ -967,7 +968,5 @@ window.addEventListener('resize', () => {
   calculateWidth();
 });
 </script>
-
 </body>
 </html>
-
