Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@ header::before {
 
     <!-- Copyright -->
     <div class="text-center text-base md:text-lg opacity-80 border-t border-amber-700/40 pt-8 mt-8">
-      © 2026 SkilliZee. All rights reserved. | Budget Boss Course
+      © 2026 SkilliZee. All rights reserved. | Running your Cafe
     </div>
   </div>
 </footer>
@@ -967,4 +967,5 @@ window.addEventListener('resize', () => {
 </script>
 </body>
 </html>
+
 
